Events position count in js

--- a/index.html
+++ b/index.html
@@ -10,15 +10,24 @@
     <ul>
       <li class="day">
         <div class="day-name"><span>Monday</span></div>
-        <ul class="dayevents-list"></ul>
+        <ul class="dayevents-list">
+          <li class="event pink" data-start-time="09:00" data-end-time="10:00">I'm Pinky!</li>
+          <li class="event blue" data-start-time="11:00" data-end-time="12:00">I'm blue dabu di dabu daaaa</li>
+          <li class="event pink" data-start-time="16:30" data-end-time="19:00">And I'm Tinky Winkey</li>
+        </ul>
       </li>
       <li class="day">
         <div class="day-name"><span>Tuesday</span></div>
-        <ul class="dayevents-list"></ul>
+        <ul class="dayevents-list">
+          <li class="event blue" data-start-time="13:00" data-end-time="13:30">Gonna rock!</li>
+        </ul>
       </li>
       <li class="day">
         <div class="day-name"><span>Wednesday</span></div>
-        <ul class="dayevents-list"></ul>
+        <ul class="dayevents-list">          
+          <li class="event pink" data-start-time="09:30" data-end-time="11:30">Yesterday...</li>
+          <li class="event pink" data-start-time="13:30" data-end-time="16:00">...all my troubles seemed so far away</li>
+        </ul>
       </li>
       <li class="day">
         <div class="day-name"><span>Thursday</span></div>
@@ -26,7 +35,9 @@
       </li>
       <li class="day">
         <div class="day-name"><span>Friday</span></div>
-        <ul class="dayevents-list"></ul>
+        <ul class="dayevents-list">
+          <li class="event pink" data-start-time="17:30" data-end-time="19:00">Now I'm free</li>
+        </ul>
       </li>
     </ul>
   </div>
